moving templates into ejs

--- a/package.json
+++ b/package.json
@@ -23,6 +23,19 @@
   },
   "devDependencies": {
     "grunt": "~0.4.5",
-    "grunt-contrib-less": "~0.12.0"
+    "grunt-contrib-less": "~0.12.0",
+    "grunt-ejs": "~0.2.0",
+    "load-grunt-tasks": "~1.0.0",
+    "underscore": "~1.7.0"
+  },
+  "ejs": {
+    "pages": [
+      "calendar",
+      "mailbox",
+      "widgets",
+      "ui/buttons",
+      "ui/general",
+      "ui/icons"
+    ]
   }
 }
