--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "grunt": "~0.4.5",
     "grunt-contrib-less": "~0.12.0",
+    "grunt-contrib-watch": "^0.6.1",
     "grunt-ejs": "~0.2.0",
     "load-grunt-tasks": "~1.0.0",
     "underscore": "~1.7.0"
