--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,7 @@
     "jquery": "~2.1.1",
     "bootstrap": "~3.3.1",
     "font-awesome": "~4.2.0",
-    "ionicons": "~1.5.2"
+    "ionicons": "~1.5.2",
+    "animate.css": "~3.2.0"
   }
 }
